{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 15,
  "lineage": "e791e211-f0b7-552d-d8cd-e8d9b688bbe2",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56b6da757370fac",
            "arn": "arn:aws:ec2:ap-south-1:897729134614:elastic-ip/eipalloc-0f56b6da757370fac",
            "domain": "vpc",
            "id": "eipalloc-0f56b6da757370fac",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-16-81.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.16.81",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "infraops-vpc-prod-nat-eip"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-nat-eip"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:internet-gateway/igw-0d9d3b530c73fdd9d",
            "id": "igw-0d9d3b530c73fdd9d",
            "owner_id": "897729134614",
            "region": "ap-south-1",
            "tags": {
              "Name": "infraops-vpc-prod-igw"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-igw"
            },
            "vpc_id": "vpc-046aa85eb248239ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56b6da757370fac",
            "association_id": "eipassoc-0d362eeff36043e76",
            "connectivity_type": "public",
            "id": "nat-0b0c0d86e4bce6a8a",
            "network_interface_id": "eni-04226c438ea38bd8e",
            "private_ip": "10.0.1.234",
            "public_ip": "3.7.16.81",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0151cf53fd7c8c792",
            "tags": {
              "Name": "infraops-vpc-prod-nat"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:route-table/rtb-080eeb867e621e042",
            "id": "rtb-080eeb867e621e042",
            "owner_id": "897729134614",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b0c0d86e4bce6a8a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infraops-vpc-prod-private-rt"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046aa85eb248239ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:route-table/rtb-0e8d8cf86b1f87b48",
            "id": "rtb-0e8d8cf86b1f87b48",
            "owner_id": "897729134614",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9d3b530c73fdd9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infraops-vpc-prod-public-rt"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046aa85eb248239ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ee64911cc3fe3bd",
            "region": "ap-south-1",
            "route_table_id": "rtb-080eeb867e621e042",
            "subnet_id": "subnet-060a5525690849e0a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08caec46e270d80e1",
            "region": "ap-south-1",
            "route_table_id": "rtb-080eeb867e621e042",
            "subnet_id": "subnet-027ccd5a8eb7aed0c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e9ae4d1db2ee70a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e8d8cf86b1f87b48",
            "subnet_id": "subnet-0151cf53fd7c8c792"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09751ef837a2aeed9",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e8d8cf86b1f87b48",
            "subnet_id": "subnet-099ba5c3eaaa19abd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:subnet/subnet-060a5525690849e0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060a5525690849e0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897729134614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "infraops-vpc-prod-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-private-1",
              "Type": "private"
            },
            "vpc_id": "vpc-046aa85eb248239ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:subnet/subnet-027ccd5a8eb7aed0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027ccd5a8eb7aed0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897729134614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "infraops-vpc-prod-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-private-2",
              "Type": "private"
            },
            "vpc_id": "vpc-046aa85eb248239ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:subnet/subnet-0151cf53fd7c8c792",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0151cf53fd7c8c792",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729134614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "infraops-vpc-prod-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-public-1",
              "Type": "public"
            },
            "vpc_id": "vpc-046aa85eb248239ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:subnet/subnet-099ba5c3eaaa19abd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ba5c3eaaa19abd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729134614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "infraops-vpc-prod-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Name": "infraops-vpc-prod-public-2",
              "Type": "public"
            },
            "vpc_id": "vpc-046aa85eb248239ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:897729134614:vpc/vpc-046aa85eb248239ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076c57e97cb219f97",
            "default_route_table_id": "rtb-05a1f56c788ddcf20",
            "default_security_group_id": "sg-088b66dbe4054378b",
            "dhcp_options_id": "dopt-03ddedf4e25b41c75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046aa85eb248239ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a1f56c788ddcf20",
            "owner_id": "897729134614",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "infraops-vpc-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "infraops-vpc-prod"
            }
          }
        }
      ]
    }
  ]
}